@@ -1,5 +1,8 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0048 :
+* Added cbp_window01_offset.
+
 A21.2.001.0047 :
 * Added offset, rotatable traffic light.
 
